fixed overflow in chrome

--- a/css/donut.css
+++ b/css/donut.css
@@ -1849,7 +1849,7 @@ header#nav-header {
 .side-search-bar {
   margin-bottom: 20px;
   display: block;
-  overflow: auto;
+  overflow: hidden;
 }
 .side-search-bar .input-group {
   display: block;
