--- a/less/components/searchbar.less
+++ b/less/components/searchbar.less
@@ -38,7 +38,7 @@
 .side-search-bar {
 	margin-bottom: 20px;
 	display: block;
-	overflow: auto;
+	overflow: hidden;
 
 	.input-group {
 		display: block;
